# pyRattlesnake

./: .gitignore  Dockerfile  README.md  Taskfile.yml  poetry.toml  pyproject.toml
.github/workflows/: taskfile-action.yml
docs/: Taskfile.yml  todo.md
scripts/: install.bat  install.sh  shell-completions.bash  shell-completions.bat  shell-completions.zsh
src/rattlesnake/: clirun.py  main.py
src/rattlesnake/core/: __init__.py
