[tool.poetry]
name = "rattlesnake"
version = "2.0.0"
description = "Admin's beloved pet in every shell system to be more like in home."
authors = ["Sett Sarverott <sarverott@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = [ "packaging", "poetry" ]


classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[tool.poetry.group.pinky_and_brain.dependencies]
ollama = "^0.4.8"
openai = "^1.79.0"
openai-agents = "^0.0.15"
moonshine = "^0.1.7"
huggingface-hub = "^0.31.4"

[project.urls]
homepage = "https://github.com/Sarverott/pyRattlesnake"
repository = "https://github.com/Sarverott/pyRattlesnake"
documentation = "https://python-poetry.org/docs/"
"Bug Tracker" = "https://github.com/python-poetry/poetry/issues"


[tool.poetry.dependencies]
python = "^3.12"
go-task-bin = "^3.43.3"
pandas = "^2.2.3"
numpy = "^2.2.5"
paramiko = "^3.5.1"
requests = "^2.32.3"
rich = "^14.0.0"
pyyaml = "^6.0.2"
typer = "^0.15.4"
prompt-toolkit = "^3.0.51"
fire = "^0.7.0"
pygments = "^2.19.1"
textual = "^3.2.0"
colorama = "^0.4.6"
setuptools = "^80.7.1"
bumpversion = "^0.6.0"
gitpython = "^3.1.44"
pygithub = "^2.6.1"
web3 = "^7.11.1"
scapy = "^2.6.1"
podman = "^5.4.0.1"
pytumblr = "^0.1.2"
tweepy = "^4.15.0"
notebook = "^7.4.2"
shodan = "^1.31.0"
scipy = "^1.15.3"
astropy = "^7.0.2"
pydrive = "^1.3.1"
gradio = "^5.29.1"
pydantic = "^2.11.4"
griffe = "^1.7.3"
mkdocs-material = "^9.6.14"
fastapi = "^0.115.12"
smolagents = {extras = ["toolkit"], version = "^1.16.1"}
evaluate = "^0.4.3"
scikit-learn = "^1.6.1"
sqlalchemy = "^2.0.41"
python-dotenv = "^1.1.0"
langchain = "^0.3.25"
langchain-community = "^0.3.24"
markdownify = "^1.1.0"
helium = "^5.1.1"
pillow = "^11.2.1"
opentimestamps-client = "^0.7.2"
opentimestamps = "^0.4.5"
lighthive = "^0.4.3"
mastodon-py = "^2.0.1"
qrcode = "^8.2"
gemma = "^3.0.2"
ipwb = "^0.2024.10.24.1853"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

